--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "js-cookie": "^3.0.5",
     "next": "15.0.2",
     "react": "^18.2.0",
     "react-confetti-boom": "^1.0.0",
