--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "js-cookie": "^3.0.5",
+    "motion": "^11.11.17",
     "next": "15.0.2",
     "react": "^18.2.0",
     "react-confetti-boom": "^1.0.0",
