--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-confetti-boom": "^1.0.0",
     "react-dom": "^18.2.0",
-    "react-feather": "^2.0.10"
+    "react-feather": "^2.0.10",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "eslint": "^8",
